# Faculdade

./: README.md
Estrutura-de-dados/: CMakeLists.txt
Estrutura-de-dados/23-02/: arquivo.txt  ex001.c  ex002  ex003
Estrutura-de-dados/Curso-Programação-C/Estrutura de dados Dinamicas/Pilha/: Main.c
Estrutura-de-dados/Tema 01/!Exercicios/Q10/: clientes.csv  main.c
Estrutura-de-dados/Tema 01/!Exercicios/Q4/: juntadordetexto.c  texto1.txt  texto2.txt
Estrutura-de-dados/Tema 01/!Exercicios/Q5/: analizadorCompras  analizadorCompras.c  compras.txt
Estrutura-de-dados/Tema 01/!Exercicios/Q6/: TirarArquivoHTML.c  arquivo.html
Estrutura-de-dados/Tema 01/!Exercicios/Q7/: Main.c  Vendas.csv
Estrutura-de-dados/Tema 01/!Exercicios/Q8/: NotasAlunos  NotasAlunos.c  alunos.csv
Estrutura-de-dados/Tema 01/02-03/: bd.txt  exemplo001  exemplo001.c
Estrutura-de-dados/Tema 01/23-02/: ex002.c  ex003.c  teste
Estrutura-de-dados/Tema 01/Slide/1/: Main.c
Estrutura-de-dados/Tema 01/Slide/2/: arquivoint.txt  main.c
Estrutura-de-dados/Tema 01/Slide/3/: dados.csv  main.c
Estrutura-de-dados/Tema 01/Slide/4/: main.c  saida.txt
Estrutura-de-dados/Tema 02/09-03/: ex001  ex001.c  ex002  ex002.c
Estrutura-de-dados/Tema 02/Atividades/Q05/: cilindro.c  cilindro.h  (+1 more)
Estrutura-de-dados/Tema 02/Fracao/: fracao.c  fracao.h  main.c
Estrutura-de-dados/Tema 03/16-03/: PesquisaSequencial.c
Estrutura-de-dados/Tema 04/Lista/: Lista.c  Lista.h  Main.c
Estrutura-de-dados/Tema 05/: main022.c
Estrutura-de-dados/Tema 06/fila/: Exemplo038.c  Exemplo039.c  Exemplo040  Exemplo040.c
(+32 files in other folders)
